--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5+1
   shared_preferences: ^2.5.4
+  flutter_svg: ^2.2.3
 
 
 
@@ -39,10 +40,8 @@ flutter:
   uses-material-design: true
   generate: true
 
-
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
 
 
